# TuboTest

./: .gitignore  README.md  gitpush.sh
doc/: 人脸场景V2.1.42.docx  年龄性别v2.1.42.docx  相似模糊v2.1.42.docx
tools/: .desktop  3third
tools/blur/: CMakeLists.txt  arm-linux_build.sh  linux_build.sh
tools/blur/src/: LIN_blur.h  test_blur.cpp  test_blur_module.cpp
tools/cartoon/: CMakeLists.txt  LIN_Cartoon.h  linux_build.sh  test_Cartoon.cpp
tools/cartoon/src/: LIN_Cartoon.h  test_RealESRGAN.cpp
tools/cartoon/test/: Linux_cartoon  linux_test.sh
tools/cartoon/test/images/: results
tools/face/: CMakeLists.txt  android_build.sh  arm-linux_build.sh  linux_build.sh  smart_album_face_cluster.cpp  smart_album_face_cluster.h
tools/face/src/: smart_album_face_cluster.cpp  smart_album_face_cluster.h  test_cluster.cpp  test_emotiondetect.cpp  test_facedetect.cpp  test_featcluster.cpp  test_featsimilar.cpp  test_infomap.cpp
tools/face/tools/: convert_bmp_to_png.py
tools/merge/: CMakeLists.txt  linux_build.sh
tools/merge/src/: LIN_Merge.h  appearChange.cpp  export_imgJson.cpp  merge.cpp
tools/nli/: CMakeLists.txt  README.md  android_build.sh  arm-linux_build.sh  linux_build.sh
tools/nli/src/: LIN_nlicluster.h  LIN_nliimage.h  LIN_nlitxt.cpp  LIN_nlitxt.h  export_imgfeat.cpp  export_txtfeat.cpp  test_platform.cpp  test_platform_thread.cpp  test_search.cpp
tools/nli/tools/: album_list  bad_form  convert.py  good_form  label_list
tools/ocr/: CMakeLists.txt  arm-linux_build.sh  linux_build.sh
tools/ocr/source/: OcrLite.h  galcore.ko  main.cpp
tools/scene/: CMakeLists.txt  smart_album_img_cls.cpp  smart_album_img_cls.h
tools/segment/: CMakeLists.txt  segment.h  test_segment.cpp
tools/segment/src/: LIN_MODNet.h  main.cpp
tools/segment/test/: Linux_segment  linux_test.sh  models
tools/similar/: CMakeLists.txt  arm-linux_build.sh  linux_build.sh
tools/similar/src/: LIN_simicluster.h  LIN_similar.h  test_similar.cpp  test_thread.cpp
tools/utils/: CMakeLists.txt  linux_build.sh
tools/utils/src/: LIN_utils.h  test_utils.cpp
